<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="60dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:text="@string/str_pattern"
        android:textColor="#000000"
        android:textSize="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_gravity="right|center_vertical"
        android:gravity="center_vertical|right">
        <Button android:layout_height="50dp"
                android:layout_width="wrap_content"
                android:id="@+id/id_btn_pattern"
                android:text="@string/pattern_1"
                android:textColor="#000000"
                android:textSize="10dp"/>
        <Button android:layout_height="50dp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:id="@+id/id_btn_preview"
            android:layout_marginStart="7dp"
            android:text="@string/pattern_preview"
            android:textSize="10dp"/>
    </LinearLayout>
</LinearLayout>