<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#0000dd"
        >
        <TextView android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="12dp"
                    android:textColor="#FFFFFF"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/checkitem"/>
    </LinearLayout>
    <ListView
        android:layout_height="0dip"
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <Button android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:text="@string/cancel"
                android:id="@+id/id_btb_cancel"/>
        <Button android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:text="@string/apply"
            android:id="@+id/id_btb_apply"/>
    </LinearLayout>
</LinearLayout>