<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#0000dd">
        <TextView android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="12dp"
                    android:textColor="#FFFFFF"
                    android:gravity="left|center_vertical"
                    android:textStyle="bold"
                    android:text="@string/str_ex_flash"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="0dip"
        android:layout_width="match_parent"
        android:layout_weight="1">
        <include layout="@layout/pattern"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#808080"/>
        <include layout="@layout/flashtime"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#808080"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <Button android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:text="@string/cancel"
                android:id="@+id/id_btb_cancel"/>
        <Button android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:text="@string/settings"
            android:id="@+id/id_btb_apply"/>
    </LinearLayout>
</LinearLayout>