<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_weight="1.2"
        android:gravity="center_vertical"
        android:text="@string/str_time_notification"
        android:textColor="#000000"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:layout_gravity="right"
        android:gravity="center_vertical|right">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginEnd="7dp"
            android:gravity="right|bottom"
            android:layout_gravity="right|bottom">
            <EditText
                android:textColor="#000000"
                android:id="@+id/id_et_min"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:gravity="bottom|right"
                android:layout_marginEnd="10dp"
                android:digits="01234567890"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:maxLength="2"
                android:textSize="12dp" />
            <TextView android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tn_min"
                        android:textSize="12dp"
                        android:gravity="bottom|left"/>
        </LinearLayout>
        <CheckBox android:layout_height="50dp"
            android:textColor="#000000"
            android:id="@+id/id_cb_tn_infinity"
            android:layout_width="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="10dp"
            android:text="@string/tn_infinity"
            android:textSize="12dp"/>
    </LinearLayout>
</LinearLayout>
